# Cataloger

./: .dockerignore  .env.example  Dockerfile  Dockerrun.aws.json  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT.md  README.md  TEST_ANALYSIS.md  USAGE.md  buildspec.yml  coverage.json  docker-compose.yml  requirements-minimal.txt  requirements.txt  run.py
.ebextensions/: 01_flask.config
.github/: README.md
app/: __init__.py  config.py  extensions.py
app/api/: __init__.py  admin.py  auth.py  catalog.py  health.py  products.py  proposals.py  requests.py
app/middleware/: __init__.py  auth_middleware.py  error_handlers.py  error_responses.py  rate_limiter.py
app/models/: __init__.py
app/services/: __init__.py  audit_service.py  catalog_service.py  embedding_service.py  product_enrichment_service.py  proposal_service.py  request_service.py
app/utils/: resilience.py
catalogai_mcp/: ARCHITECTURE.md  CODE_EXECUTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  __main__.py  build_sandbox.sh  claude_desktop_config.json  code_executor.py  pyproject.toml  sandbox.Dockerfile  server.py  test_code_execution.py  test_setup.py
catalogai_mcp/skills/: README.md  __init__.py
catalogai_sdk/: __init__.py  catalog.py  client.py  proposals.py  pyproject.toml  requests.py
docs/: FINAL_STATUS.md  PROJECT_STRUCTURE.md  README.md
scripts/: check_setup.py  reset_passwords.py  seed_data.py
tests/: FIX_PROGRESS.md  IMPLEMENTATION_PATTERNS.md  KNOWN_ISSUES.md  README.md  TEST_STATUS.md  __init__.py  conftest.py  pytest.ini  test_fixes_summary.md
(+36 files in other folders)
