[project]
name = "catalogai-sdk"
version = "0.1.0"
description = "Python SDK for CatalogAI procurement system"
dependencies = ["httpx>=0.25.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["catalogai_sdk"]

[tool.setuptools.package-dir]
catalogai_sdk = "."
